refactor bookForm and remove editBooks feature from standard user

--- a/src/main/resources/org/uet/library_management/ui/admin/adminMenu.fxml
+++ b/src/main/resources/org/uet/library_management/ui/admin/adminMenu.fxml
@@ -48,10 +48,10 @@
         </Button>
     </VBox>
 
-    <Button fx:id="usernameButton" styleClass="username-button" text="Anonymous">
+    <Button fx:id="usernameButton" styleClass="username-button" text="Admin">
         <graphic>
             <ImageView fx:id="usernameImageView" fitHeight="40" fitWidth="40">
-                <Image url="@../../icons/avatar-male.png" />
+                <Image url="@../../icons/avatar-female.png" />
             </ImageView>
         </graphic>
     </Button>
