--- a/src/main/resources/org/uet/library_management/ui/admin/adminMenu.fxml
+++ b/src/main/resources/org/uet/library_management/ui/admin/adminMenu.fxml
@@ -48,11 +48,21 @@
         </Button>
     </VBox>
 
-    <Button fx:id="usernameButton" styleClass="username-button" text="Admin">
-        <graphic>
-            <ImageView fx:id="usernameImageView" fitHeight="40" fitWidth="40">
-                <Image url="@../../icons/avatar-female.png" />
-            </ImageView>
-        </graphic>
-    </Button>
+    <HBox>
+        <Button fx:id="usernameButton" styleClass="username-button" text="Admin">
+            <graphic>
+                <ImageView fx:id="usernameImageView" fitHeight="40" fitWidth="40">
+                    <Image url="@../../icons/avatar-female.png" />
+                </ImageView>
+            </graphic>
+        </Button>
+
+        <Button fx:id="logoutButton" styleClass="logout-button" onAction="#handleLogoutMenu">
+            <graphic>
+                <ImageView fx:id="logoutImageView" fitHeight="40" fitWidth="40">
+                    <Image url="@../../icons/logout.png" />
+                </ImageView>
+            </graphic>
+        </Button>
+    </HBox>
 </VBox>
