--- a/src/main/resources/org/uet/library_management/ui/menu.fxml
+++ b/src/main/resources/org/uet/library_management/ui/menu.fxml
@@ -82,7 +82,7 @@
     </VBox>
 
     <HBox>
-        <Button fx:id="usernameButton" styleClass="username-button" text="Anonymous">
+        <Button fx:id="usernameButton" styleClass="username-button" onAction="#handleSettingsMenu">
             <graphic>
                 <ImageView fx:id="usernameImageView" fitHeight="40" fitWidth="40">
                     <Image url="@../icons/avatar-male.png" />
