--- a/src/main/resources/org/uet/library_management/styles/bookDetail.css
+++ b/src/main/resources/org/uet/library_management/styles/bookDetail.css
@@ -3,6 +3,20 @@
     -fx-font-size: 12px;
     -fx-text-fill: rgba(255, 255, 255, 0.7);
     -fx-font-family: "Montserrat";
+    -fx-padding: 0 0 0 10;
+}
+.boldText {
+    -fx-font-weight: bold;
+    -fx-font-family: "Montserrat";
+    -fx-padding: 0 0 0 10;
+    -fx-font-size: 18px;
+}
+.normalText {
+    -fx-font-family: "Montserrat";
+        -fx-text-fill: black;
+        -fx-opacity: 0.6;
+        -fx-font-size: 18px;
+        -fx-padding: 0 0 0 10;
 }
 #backButton {
     -fx-text-fill: white;
@@ -14,9 +28,12 @@
 #backButton:hover {
     -fx-background-color: #005A9E;
 }
+#detailScroll {
+
+}
 #bookDetailBox {
     -fx-padding: 50 0 0 0px;
-    -fx-spacing: 10px;
+
 }
 #bookInfoBox {
     -fx-background-color: #7CB9E8;
@@ -56,21 +73,22 @@
 #descriptionAndCommentBox {
      -fx-background-color: white;
      -fx-spacing: 10px;
+     -fx-wrap-text: true;
 }
 #descriptionBox {
     -fx-spacing: 10px;
 }
-#descriptionLabel {
+.section {
     -fx-font-family: "Montserrat";
     -fx-text-fill: black;
-    -fx-font-size: 18px;
+    -fx-font-size: 24px;
     -fx-padding: 20 0 0 10;
 }
 #descriptionText {
     -fx-font-family: "Montserrat";
     -fx-text-fill: black;
     -fx-opacity: 0.6;
-    -fx-font-size: 14px;
+    -fx-font-size: 20px;
     -fx-padding: 0 0 0 10;
     -fx-wrap-text: true;
 }
