--- a/src/main/resources/org/uet/library_management/styles/settings.css
+++ b/src/main/resources/org/uet/library_management/styles/settings.css
@@ -3,7 +3,7 @@
     -fx-pref-width: 450;
     -fx-pref-height: 450;
     -fx-font-size: 14px;
-    -fx-alignment: LEFT;
+    /*-fx-alignment: LEFT;*/
     -fx-padding: 20 20 20 20;
 }
 
