--- a/src/main/resources/org/uet/library_management/styles/bookDetail.css
+++ b/src/main/resources/org/uet/library_management/styles/bookDetail.css
@@ -44,11 +44,13 @@
     -fx-padding: 55 0 0 20px;
     -fx-spacing: 10px;
 }
+
 #title {
     -fx-font-size: 24px;
     -fx-text-fill: white;
     -fx-font-family: "Montserrat Extrabold";
 }
+
 #author {
     -fx-font-size: 20px;
     -fx-text-fill: white;
@@ -88,6 +90,7 @@
     -fx-font-size: 16px;
     -fx-padding: 0 0 0 10;
     -fx-wrap-text: true;
+    -fx-background-color: #EFFBFF;
 }
 #moreButton {
     -fx-font-weight: bold;
@@ -102,4 +105,5 @@
 }
 #bookInformationBox {
     -fx-spacing: 10px;
+    -fx-background-color: #EFFBFF;
 }
