--- a/src/main/resources/org/uet/library_management/styles/menu.css
+++ b/src/main/resources/org/uet/library_management/styles/menu.css
@@ -5,8 +5,9 @@
 }
 
 .menu-pane {
-    -fx-pref-height: 447;
+    -fx-pref-height: 1080;
     -fx-alignment: TOP_CENTER;
+    -fx-background-color: linear-gradient(to bottom, #EAF4FF, #C1E2FF);
 }
 
 .search-pane {
@@ -15,7 +16,8 @@
 }
 
 .search-text-field {
-    -fx-background-color: #dedede; /* Background color */
+    -fx-background-color: #dedede;/* Background color */
+/*    -fx-background-color: #00ffff;*/
     -fx-text-fill: #262626;
     -fx-border-color: #ccc; /* Border color */
     -fx-border-radius: 8px; /* Rounded corners */
@@ -39,10 +41,12 @@
     -fx-font-weight: BOLD;
     -fx-font-size: 16px;
     -fx-padding: 20 0 5 0;
+    -fx-font-family : 'Nunito';
 }
 
 .menu-button {
     -fx-background-color: transparent;
+    -fx-font-family : 'Nunito';
     -fx-text-fill: #262626;
     -fx-pref-width: 170;
     -fx-pref-height: 30;
@@ -50,14 +54,22 @@
 }
 
 .menu-button:hover {
-    -fx-background-color: #262626;
+    -fx-background-color: #65c1f7;
     -fx-text-fill: #eeeeee;
 }
 
 .username-button {
-    -fx-background-color: transparent;
-    -fx-pref-width: 200;
-    -fx-pref-height: 83;
+    -fx-background-color: linear-gradient(to bottom, #aac9f1, #73a2e1);
+    -fx-pref-width: 150;
+    -fx-pref-height: 40;
     -fx-font-size: 16px;
-    /*-fx-alignment: */
+    -fx-alignment: BOTTOM_LEFT;
+}
+
+.logout-button {
+    -fx-background-color: linear-gradient(to bottom, #aac9f1, #73a2e1);
+}
+
+.logout-button:hover {
+    -fx-background-color : #75bcff;
 }
