--- a/src/main/resources/org/uet/library_management/ui/main.fxml
+++ b/src/main/resources/org/uet/library_management/ui/main.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.layout.*?>
 
+<?import javafx.scene.control.ScrollPane?>
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="org.uet.library_management.ui.MainController">
