--- a/src/main/resources/org/uet/library_management/ui/bookDetailPage.fxml
+++ b/src/main/resources/org/uet/library_management/ui/bookDetailPage.fxml
@@ -6,7 +6,7 @@
 
 <BorderPane xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.uet.library_management.ui.BookDetailController">
     <center>
-        <ScrollPane fx:id="detailScroll"  fitToWidth="true" pannable="true" vbarPolicy="ALWAYS">
+        <ScrollPane fitToWidth="true" pannable="true" vbarPolicy="ALWAYS">
             <VBox fx:id="bookDetailBox">
                 <Button fx:id="backButton" onAction="#onBackButtonClicked" text="back" />
                 <HBox fx:id="bookInfoBox" alignment="CENTER_LEFT" prefHeight="400" prefWidth="600">
