--- a/src/main/resources/org/uet/library_management/styles/settings.css
+++ b/src/main/resources/org/uet/library_management/styles/settings.css
@@ -56,3 +56,20 @@
     -fx-font-weight: BOLD;
     -fx-padding: 5 0 0 20;
 }
+
+.changes-vbox {
+    -fx-background-color: #f2f3f7;
+    -fx-pref-width: 450;
+    -fx-pref-height: 450;
+    -fx-font-size: 14px;
+    /*-fx-alignment: LEFT;*/
+    -fx-padding: 20 20 20 20;
+}
+
+.changes-button {
+    -fx-pref-width: 410;
+    -fx-text-fill: white;
+    -fx-background-color: #0064e0;
+    -fx-background-radius: 20px;
+    -fx-border-radius: 20px;
+}
