implement change password feature

--- a/src/main/resources/org/uet/library_management/ui/settings/changePassword.fxml
+++ b/src/main/resources/org/uet/library_management/ui/settings/changePassword.fxml
@@ -20,12 +20,12 @@
 
     <Pane styleClass="spacing-pane" />
 
-    <TextField promptText="Current password" />
+    <PasswordField promptText="Current password" />
     <Pane styleClass="spacing-pane" />
-    <TextField promptText="New password" />
+    <PasswordField fx:id="newPasswordField" promptText="New password" />
     <Pane styleClass="spacing-pane" />
-    <TextField promptText="Retype new password" />
+    <PasswordField promptText="Retype new password" />
     <Pane styleClass="spacing-pane" />
 
-    <Button styleClass="changes-button" text="Change Password" />
+    <Button styleClass="changes-button" onAction="#handleChangePasswordButton" text="Change Password" />
 </VBox>
